<resources>
    <string name="app_name">eRouška</string>
    <string name="covid19_link">https://covid19cz.cz/</string>
    <string name="login_try_again">zkontrolujte telefonní číslo</string>
    <string name="notification_title">eRouška je aktivní</string>
    <string name="notification_text">Právě pomáháte chránit sebe i\u00A0ostatní</string>
    <string name="notification_title_error">eRouška není aktivní</string>
    <string name="notification_text_bluetooth_disabled">Pro správnou funkci eRoušky je třeba zapnout Bluetooth</string>
    <string name="notification_text_location_disabled">Pro správnou funkci eRoušky je třeba zapnout Polohové služby</string>
    <string name="notification_text_battery_saver_enabled">Pro správnou funkci eRoušky je třeba vypnout spořič baterie</string>
    <string name="notification_text_paused">Aplikace pozastavená. Nezapomeňte ji spustit.</string>
    <string name="notification_action_resume">Spustit</string>
    <string name="notification_text_resumed">Aplikace běží a\u00A0zaznamenává anonymně telefony ve vašem okolí.</string>
    <string name="notification_action_pause">Pozastavit</string>
    <string name="notification_action_enable_bluetooth">Zapnout Bluetooth</string>
    <string name="notification_action_enable_location">Zapnout Polohové služby</string>
    <string name="notification_action_disable_battery_saver">Vypnout spořič baterie</string>
    <string name="foreground_service_channel">Služba na pozadí</string>
    <string name="foreground_service_alert_channel">Důležitá upozornění</string>
    <string name="help_toolbar_title">Nápověda</string>
    <string name="bluetooth_toolbar_title">Hledání zařízení</string>
    <string name="go_back_button">Zpět do aplikace</string>
    <string name="enable_bluetooth_button">Zapnout Bluetooth</string>
    <string name="enable">Povolit</string>
    <string name="bt_disabled_title">Zapněte Bluetooth</string>
    <string name="bt_disabled_desc">Bez zapnutého Bluetooth nemůže eRouška vytvářet seznam telefonů ve vašem okolí.\n\nZapněte jej pomocí tlačítka \"Zapnout Bluetooth\".</string>
    <string name="location_disabled_title">Zapněte Polohové služby</string>
    <string name="location_disabled_desc">I\u00A0když polohová data nijak nevyužíváme, zapněte je prosím pro správné fungování Bluetooth pomocí tlačítka \"Zapnout Polohové služby\".</string>
    <string name="enable_location_button">Zapnout Polohové služby</string>
    <string name="bt_location_disabled_title">Zapněte Bluetooth a\u00A0Polohové služby</string>
    <string name="bt_location_disabled_desc">Bez zapnutého Bluetooth a\u00A0Polohových služeb nemůže eRouška vytvářet seznam telefonů ve vašem okolí. \n\nI\u00A0když polohová data nijak nevyužíváme, zapněte prosím obě funkce pro správné fungování Bluetooth pomocí tlačítka \"Zapnout BT a\u00A0Polohové služby\”.</string>
    <string name="enable_bt_location_button">Zapnout BT a\u00A0Polohové služby</string>
    <string name="dashboard_title_running">eRouška je aktivní</string>
    <string name="dashboard_title_paused">eRouška je pozastavená</string>
    <string name="dashboard_body">Aplikace pracuje na pozadí a\u00A0monitoruje okolí, prosím neukončujte ji. Nechte zapnuté Bluetooth a\u00A0s\u00A0telefonem pracujte jako obvykle.</string>
    <string name="dashboard_body_paused">Aplikace je aktuálně pozastavená a\u00A0nesbírá žádná data o\u00A0vašem okolí.\n\nSpusťte znovu sběr dat a\u00A0chraňte sebe i\u00A0své okolí. Nezapomínejte na to zejména v\u00A0momentě, kdy opouštíte svůj domov.</string>
    <string name="dashboard_secondary">Při podezření na nákazu vás budeme kontaktovat na čísle %s. Požádáme vás o\u00A0zaslání anonymizovaného seznamu telefonů, který naleznete v\u00A0sekci Moje data.</string>
    <string name="bt_enabled_desc">Děkujeme, že pomáháte bojovat proti šíření koronaviru.\n\nSpolupracujte prosím s\u00A0pracovníky hygienické stanice na dohledání všech osob, se kterými jste byli v\u00A0kontaktu.</string>
    <string name="bt_enabled_toolbar_title">Odesláno</string>
    <string name="share_app">Sdílet aplikaci</string>
    <string name="upload_data">Kontaktovali mě hygienici</string>
    <string name="show_my_data">Zobrazit moje data</string>
    <string name="pause_app">Pozastavit eRoušku</string>
    <string name="start_app">Spustit eRoušku</string>
    <string name="error_ble_unsupported">Vaše zařízení nepodporuje Bluetooth LE</string>
    <string name="permission_onboarding_title">eRouška pro správné fungování potřebuje používat Bluetooth</string>
    <string name="permission_onboarding_desc">Bluetooth je součástí polohových služeb. Proto vás po stisknutí tlačítka "Povolit" požádáme také o\u00A0přístup k\u00A0oprávnění Sledování polohy. Potvrďte obě žádosti, aby aplikace mohla správně fungovat.</string>
    <string name="permission_onboarding_desc_2">Nasbíraná data můžete odeslat pouze vy, a\u00A0to ve chvíli, kdy vás k\u00A0tomu vyzve pracovník hygienické stanice.</string>
    <string name="permission_onboarding_desc_minor">Nemusíte se obávat, aplikace vaši polohu nikdy nesleduje ani neukládá.</string>
    <string name="permission_onboarding_toolbar_title">Povolení</string>
    <string name="login_toolbar_title">Telefonní číslo</string>
    <string name="welcome_help">Jak to funguje</string>
    <string name="welcome_activation">Pokračovat k\u00A0aktivaci</string>
    <string name="welcome_description"><![CDATA[Aplikace bude nepřetržitě monitorovat vaše okolí a&nbsp;zaznamenávat všechny ostatní telefony s aplikací eRouška, ke kterým se přiblížíte.<br/><br/>Pokud se u&nbsp;majitele kteréhokoliv z&nbsp;nich potvrdí nákaza koronavirem, telefonicky vás kontaktuje pracovník hygienické stanice.<br/><br/>Když se potvrdí nákaza u&nbsp;vás, hygienická stanice bude kontaktovat všechny ostatní uživatele aplikace, s&nbsp;kterými jste se potkali.<br/><br/><a href="%s">Několik nezávislých auditů</a> garantuje, že aplikace neodesílá vaše osobní údaje bez vašeho vědomí. Odešlete je vy sami a&nbsp;pouze hygienikům.]]></string>
    <string name="welcome_title">Díky eRoušce ochráníte sebe i\u00A0ostatní ve svém okolí</string>
</resources>