<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="cz.covid19cz.app.ui.dashboard.DashboardVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="16dp">

            <ImageView
                android:id="@+id/app_running_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibleOrGone="@{vm.serviceRunning}" />

            <ImageView
                android:id="@+id/app_paused_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_paused"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibleOrGone="@{!vm.serviceRunning}" />

            <TextView
                android:id="@+id/app_running_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/dashboard_title_running"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/green"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_running_image"
                app:visibleOrGone="@{vm.serviceRunning}" />

            <TextView
                android:id="@+id/app_paused_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/dashboard_title_paused"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/orange"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_paused_image"
                app:visibleOrGone="@{!vm.serviceRunning}" />

            <TextView
                android:id="@+id/app_running_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/dashboard_body"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintTop_toBottomOf="@id/app_running_title"
                app:visibleOrGone="@{vm.serviceRunning}"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/app_running_body_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/dashboard_secondary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorOnSurface"
                app:layout_constraintTop_toBottomOf="@id/app_running_body"
                app:visibleOrGone="@{vm.serviceRunning}"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/app_paused_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/dashboard_body_paused"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintTop_toBottomOf="@id/app_paused_title"
                app:visibleOrGone="@{!vm.serviceRunning}"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_button"
                style="?materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> vm.pause()}"
                android:text="@string/pause_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_running_body"
                app:layout_constraintVertical_bias="1.0"
                app:visibleOrGone="@{vm.serviceRunning}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> vm.start()}"
                android:text="@string/start_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_running_body"
                app:layout_constraintVertical_bias="1.0"
                app:visibleOrGone="@{!vm.serviceRunning}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>